--- a/foreman-task-tracker/styles/window.css
+++ b/foreman-task-tracker/styles/window.css
@@ -6,12 +6,25 @@ td.ops {
   text-align: right;
 }
 
+dd.taskactive {
+  background-color: #FFA600;
+}
+
+dd.taskpending {
+  background-color: #00A6FF;
+}
+
+dd.taskarchive {
+  background-color: #00FFA6
+}
+
 html, body {
   padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
   font-family: Helvetica, Arial;
+  -webkit-user-select: text;
 }
 
 h1 {
