--- a/foreman-task-tracker/styles/window.css
+++ b/foreman-task-tracker/styles/window.css
@@ -36,3 +36,11 @@ h1 {
   background: #F2F2F2;
   font-size: 24px;
 }
+
+.active {
+  cursor: text;
+}
+
+.constActive {
+  -webkit-user-select: none;
+}
