--- a/foreman-task-tracker/styles/window.css
+++ b/foreman-task-tracker/styles/window.css
@@ -1,21 +1,63 @@
 textarea.entry {
+  -webkit-user-select: text;
   width: 100%;
 }
+
+.T-I {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  opacity: .7;
+  margin-top: -3px;
+  vertical-align: middle;
+  height: 22px;
+  width: 23px;  
+  -webkit-user-select: none;
+}
+
+.T-I:hover {
+  opacity: 1.0;
+}
+
+.archive-button {
+  background: #F1F1F1 url(../assets/sprite_black2.png) -84px -21px no-repeat;
+}
+
+.delete-button {
+  background: #F1F1F1 url(../assets/sprite_black2.png) -62px -43px no-repeat;
+}
+
+.unarchive-button {
+  background: #F1F1F1 url(../assets/sprite_black2.png) -21px -85px no-repeat;
+ }
+
+.resume-button {
+  background: #F1F1F1 url(../assets/sprite_black2.png) -21px -85px no-repeat;
+ }
+
+/*
+<div class="T-I J-J5-Ji lR T-I-ax7 T-I-Js-IF ar7 T-I-JO" act="7" role="button" tabindex="0" style="-webkit-user-select: none;" aria-label="Archive" data-tooltip="Archive">
+<div class="asa">
+<span class="J-J5-Ji ask">&nbsp;</span>
+<div class="ar8 T-I-J3 J-J5-Ji"></div></div></div>
+*/
 
 td.ops {
   text-align: right;
 }
 
+dd {
+  -webkit-user-select: text;
+}
+
 dd.taskactive {
-  background-color: #FFA600;
+  background-color: #FFA655;
 }
 
 dd.taskpending {
-  background-color: #00A6FF;
+  background-color: #55A6FF;
 }
 
 div.taskarchive dd {
-  background-color: #00FFA6
+  background-color: #55FFA6
 }
 
 html, body {
@@ -24,7 +66,6 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: Helvetica, Arial;
-  -webkit-user-select: text;
 }
 
 h1 {
