--- a/printing/style.css
+++ b/printing/style.css
@@ -18,10 +18,11 @@
   }
 
   body {
-    -webkit-app-region: drag;
+    /* -webkit-app-region: drag;  (disabled for <http://crbug.com/309783>) */
+    border-top: 1px solid lightgray;
     font: normal 14px 'Lucida Grande', sans-serif;
     margin: 0;
-    padding: 20px 5px 0;
+    padding: 3px 5px 0;
     position: relative;
     text-align: center;
   }
@@ -32,7 +33,7 @@
 
   button,
   input[type='checkbox'] {
-    -webkit-app-region: no-drag;
+    /* -webkit-app-region: no-drag;  (disabled for <http://crbug.com/309783>) */
     -webkit-appearance: none;
     background-image: -webkit-linear-gradient(rgb(237, 237, 237),
                                               rgb(237, 237, 237) 38%,
@@ -54,8 +55,18 @@
     width: 100%;
   }
 
-  button:active,
-  button:active:hover,
+  button:disabled {
+    background-image: -webkit-linear-gradient(rgb(241, 241, 241),
+                                              rgb(241, 241, 241) 38%,
+                                              rgb(230, 230, 230));
+    border-color: rgba(80, 80, 80, 0.2);
+    box-shadow: 0 1px 0 rgba(80, 80, 80, 0.08),
+                inset 0 1px 2px rgba(255, 255, 255, 0.75);
+    color: #aaa;
+  }
+
+  button:enabled:active,
+  button:enabled:active:hover,
   input[type='checkbox']:active {
     background-image: -webkit-linear-gradient(rgb(231, 231, 231),
                                               rgb(231, 231, 231) 38%,
@@ -64,7 +75,7 @@
     text-shadow: none;
   }
 
-  button:hover,
+  button:enabled:hover,
   input[type='checkbox']:hover {
     background-image: -webkit-linear-gradient(rgb(240, 240, 240),
                                               rgb(240, 240, 240) 38%,
@@ -86,31 +97,8 @@
   #centered-contents {
     display: table-cell;
     margin: 0;
-    padding: 0;
+    padding: 7px 10px;
     vertical-align: middle;
-  }
-
-  #close {
-    background: url("close-14x14.png");
-    border: none;
-    border-radius: 0;
-    box-shadow: none;
-    height: 14px;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 7px;
-    top: 7px;
-    width: 14px;
-  }
-
-  #close:active,
-  #close:active:hover {
-    background: url("close-active-14x14.png");
-  }
-
-  #close:hover {
-    background: url("close-hover-14x14.png");
   }
 
   div {
@@ -118,17 +106,17 @@
   }
 
   #fill-contents {
-    left: 10px;
-    padding: 5px 0;
+    left: 0;
+    padding: 0;
     position: absolute;
-    right: 10px;
-    top: 20px;
+    right: 0;
+    top: 0;
   }
 
   #fill-footer {
     bottom: 0px;
     left: 0px;
-    padding: 2px 10px 10px;
+    padding: 0 10px 10px;
     position: absolute;
     right: 0px;
   }
