--- a/api/alarms/index.css
+++ b/api/alarms/index.css
@@ -11,45 +11,7 @@ body {
   font-size: 16px;
 }
 
-#display {
-  background-color: rgba(0, 0, 0, 15%);
-  min-height: 5em;
-  border-radius: 3px;
-  border: 1px solid rgba(0, 0, 0, 15%);
-
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(var(--card-min-width), 1fr));
-  column-gap: 10px;
-  row-gap: 15px;
-  padding: 10px 15px;
-}
-
-.alarm-info {
-  background-color: rgb(255, 255, 255);
-  min-height: 5em;
-  border-radius: 3px;
-  border: 1px solid rgb(193 193 193);
-  padding: 1em 2em;
-}
-
-.alarm-info__table {
-  border-collapse: collapse;
-}
-
-.alarm-info--finished {
-  background: repeating-linear-gradient(135deg, #eee, #eee 10px, #ddd 10px, #ddd 20px);
-}
-
-.alarm-info td,
-.alarm-info th {
-  padding: 0.2em 0.5em;
-}
-
-.alarm-info-label {
-  text-align: right;
-}
-
-/* **** */
+/* Alarm creation form */
 
 .create-alarm {
   display: grid;
@@ -70,9 +32,66 @@ body {
   grid-column: 1 / -1;
 }
 
-/* **** */
+/* Alarm list and log wrapper */
 
 .col-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+}
+
+.alarm-display,
+.alarm-log {
+  min-height: 2em;
+  padding: .5em;
+  background-color: hsl(0, 0%, 95%);
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 4px;
+  padding: 0;
+}
+
+.alarm-log {
+  white-space: pre-line;
+}
+
+.alarm-log > * {
+  padding: .5em;
+}
+
+.alarm-log > *:not(:first-child) {
+  border-top: 1px solid hsl(0, 0%, 70%);
+}
+
+.display-buttons {
+  display: inline-block;
+}
+
+.alarm-row {
+  padding: .5em;
+  position: relative;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+}
+
+.alarm-row:hover,
+.alarm-log > *:hover {
+  background: hsl(190, 20%, 90%)
+}
+
+.alarm-row:not(:first-child) {
+  margin-top: -1px;
+}
+
+.alarm-row:not(:first-child):hover {
+  border-top: 1px solid hsl(0, 0%, 70%);
+}
+
+.alarm-row:not(:last-child):hover {
+  border-bottom: 1px solid hsl(0, 0%, 70%);
+}
+
+.alarm-row__cancel-button {
+  position: absolute;
+  top: .5em;
+  right: .5em;
 }
