--- a/api-samples/alarms/index.css
+++ b/api-samples/alarms/index.css
@@ -43,7 +43,7 @@ body {
 .alarm-display,
 .alarm-log {
   min-height: 2em;
-  padding: .5em;
+  padding: 0.5em;
   background-color: hsl(0, 0%, 95%);
   border: 1px solid hsl(0, 0%, 80%);
   border-radius: 4px;
@@ -55,7 +55,7 @@ body {
 }
 
 .alarm-log > * {
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .alarm-log > *:not(:first-child) {
@@ -67,7 +67,7 @@ body {
 }
 
 .alarm-row {
-  padding: .5em;
+  padding: 0.5em;
   position: relative;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
@@ -75,7 +75,7 @@ body {
 
 .alarm-row:hover,
 .alarm-log > *:hover {
-  background: hsl(190, 20%, 90%)
+  background: hsl(190, 20%, 90%);
 }
 
 .alarm-row:not(:first-child) {
@@ -92,6 +92,6 @@ body {
 
 .alarm-row__cancel-button {
   position: absolute;
-  top: .5em;
-  right: .5em;
+  top: 0.5em;
+  right: 0.5em;
 }
