Invert tab colours.
Sebastian pointed out that having a darker color for the selected
option made it slightly confusing to know which tab was active.

--- a/api-samples/scripting/index.css
+++ b/api-samples/scripting/index.css
@@ -37,12 +37,13 @@ h1 {
 }
 
 .tabs label.selected {
-  background: #f6f9fe;
+  background: white;
   font-weight: bold;
 }
 
 .tabs label {
   display: block;
+  background: #f6f9fe;
   text-align: center;
   width: 100%;
   padding: 7px 0;
